# ralph-orchestrator

./: .env.example  .envrc  .gitignore  404.html  AGENTS.md  BACKLOG.md  BUG_ANALYSIS.md  BUG_EXAMPLE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_PR303.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  ISSUES.md  Justfile  PLAN.md  PROMPT-QA.md  PROMPT.md  README.md  VERIFICATION_PROMPT_PRECEDENCE.md  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  hats.bot.yml  hats.pi.yml  hats.yml  index.html  mkdocs.yml  package-lock.json  package.json  patch_windows.sh  pyproject.toml  ralph.bot.yml  ralph.codex-acp.yml  ralph.e2e.yml  ralph.m.yml  (+8 more)
crates/hats-bench/: Cargo.toml
crates/hats-bench/src/: main.rs
crates/hats-cli/: Cargo.toml
crates/hats-cli/examples/: calculator.rs  greeter.rs
crates/hats-cli/presets/: README.md  bdd.yml  bugfix.yml  code-assist.yml  debug.yml  deploy.yml  docs.yml  feature.yml  gap-analysis.yml  hatless-baseline.yml  merge-loop.yml  pdd-to-code-assist.yml  pr-review.yml  refactor.yml  research.yml  review.yml  spec-driven.yml
crates/hats-cli/presets/minimal/: amp.yml  builder.yml  claude.yml  code-assist.yml  codex.yml  gemini.yml  kiro.yml  opencode.yml  preset-evaluator.yml  smoke.yml  test.yml
crates/hats-cli/sops/: code-task-generator.md  pdd.md
crates/hats-cli/src/: bot.rs  display.rs  doctor.rs  hats.rs  init.rs  interact.rs  lib.rs  loop_runner.rs  loops.rs  main.rs  memory.rs  preflight.rs  presets.rs  skill_cli.rs  sop_runner.rs  task_cli.rs  test_support.rs  tools.rs  web.rs
crates/hats-cli/tests/: clean_diagnostics.rs  integration_clean.rs  integration_events_isolation.rs  integration_loops_merge.rs  integration_memory.rs  integration_merge_button.rs  integration_preflight.rs  integration_resume.rs  integration_run.rs  integration_run_presets.rs  integration_skill.rs  integration_tasks.rs  integration_web.rs  trace_layer_integration_test.rs
crates/hats-e2e/: Cargo.toml  README.md
crates/hats-e2e/src/: analyzer.rs  auth.rs  executor.rs  lib.rs  main.rs  mock.rs  mock_cli.rs  models.rs  reporter.rs  runner.rs  workspace.rs
crates/hats-e2e/src/scenarios/: capabilities.rs  connectivity.rs  errors.rs  events.rs  hats.rs  incremental.rs  memory.rs  mod.rs  tasks.rs  (+1 more)
crates/hats-proto/: Cargo.toml
crates/hats-proto/src/: daemon.rs  error.rs  event.rs  event_bus.rs  hat.rs  lib.rs  robot.rs  topic.rs  ux_event.rs
crates/hats-telegram/: Cargo.toml  README.md
crates/hats-telegram/src/: bot.rs  commands.rs  daemon.rs  error.rs  handler.rs  lib.rs  loop_lock.rs  service.rs  state.rs
crates/ralph-adapters/: Cargo.toml
crates/ralph-adapters/src/: acp_executor.rs  auto_detect.rs  claude_stream.rs  cli_backend.rs  cli_executor.rs  json_rpc_handler.rs  lib.rs  pi_stream.rs  pty_executor.rs  stream_handler.rs  tool_preview.rs
crates/ralph-adapters/tests/: pty_executor_integration.rs
crates/ralph-cli/: Cargo.toml
crates/ralph-cli/examples/: calculator.rs  greeter.rs
crates/ralph-cli/presets/: COLLECTION.md  README.md  autoresearch.yml  code-assist.yml  confession-loop.yml  executive-ceo.yml  feature.yml  merge-loop.yml  pdd-to-code-assist.yml  wave-review.yml
crates/ralph-cli/sops/: code-task-generator.md  pdd.md
crates/ralph-cli/src/: api_bridge.rs  backend_support.rs  bot.rs  completions.rs  config_resolution.rs  display.rs  doctor.rs  factory.rs  hats.rs  hooks.rs  init.rs  interact.rs  lib.rs  loop_runner.rs  loops.rs  main.rs  mcp.rs  memory.rs  preflight.rs  presets.rs  prps.rs  rpc_stdin.rs  skill_cli.rs  sop_runner.rs  task_cli.rs  test_support.rs  tools.rs  web.rs  worker_cli.rs
crates/ralph-cli/tests/: clean_diagnostics.rs  integration_autoloop_preset.rs  integration_confession_preset.rs  integration_events_isolation.rs  integration_gitignore.rs  integration_hat_backend.rs  integration_hooks_validate.rs  integration_loops_merge.rs  integration_memory.rs  integration_preflight.rs  integration_preset.rs  integration_prps.rs  integration_run.rs  integration_run_presets.rs  integration_skill.rs  integration_tasks.rs  integration_web.rs  integration_worker_inspect.rs  trace_layer_integration_test.rs
crates/ralph-core/: Cargo.toml
crates/ralph-core/benches/: performance.rs
crates/ralph-core/data/: ralph-tools.md  robot-interaction-skill.md
crates/ralph-core/src/: config.rs  event_logger.rs  event_loop.rs  event_parser.rs  event_reader.rs  file_lock.rs  handoff.rs  hat_registry.rs  hatless_ralph.rs  instructions.rs  lib.rs  loop_completion.rs  loop_context.rs  loop_history.rs  loop_lock.rs  loop_registry.rs  memory_store.rs  merge_queue.rs  preflight.rs  preset_source.rs  prp_files.rs  prp_queue.rs  session_recorder.rs  skill_registry.rs  summary_writer.rs  task.rs  task_store.rs  text.rs  utils.rs  workspace.rs  worktree.rs
crates/ralph-core/tests/: diagnostics_e2e.rs  event_loop_ralph.rs  hooks_config_boundary.rs  smoke_runner.rs
crates/ralph-heygen/: Cargo.toml  README.md
crates/ralph-heygen/examples/: generate_video.rs  list_voices.rs
crates/ralph-heygen/src/: api.rs  config.rs  error.rs  generator.rs  lib.rs  types.rs
crates/ralph-mcp/: Cargo.toml
crates/ralph-mcp/src/: lib.rs  server.rs  tools.rs
crates/ralph-mcp/tests/: mcp_e2e.rs
crates/ralph-mobile-server/: AGENTS.md  Cargo.toml  ralph.yml
crates/ralph-mobile-server/src/: AGENTS.md  auth.rs  cli.rs  lib.rs  main.rs  session.rs  watcher.rs
crates/ralph-slack/: Cargo.toml
crates/ralph-slack/src/: api.rs  daemon.rs  error.rs  handler.rs  lib.rs  renderer.rs  service.rs  socket_mode.rs  state.rs
crates/ralph-slack/tests/: slack_daemon.rs  slack_renderer.rs  slack_routing.rs  slack_runbook.rs  slack_service.rs  slack_socket_mode.rs
crates/ralph-web/: Cargo.toml  README.md
crates/ralph-web/frontend/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
crates/ralph-web/src/: lib.rs  loop_manager.rs  main.rs  mock_loop_manager.rs  models.rs  store.rs  test_endpoints.rs  watcher.rs  websocket.rs
crates/ralph-web/tests/: integration.rs
(+1269 files in other folders)
