[package]
name = "hats-bench"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Benchmark harness for Hats"
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[[bin]]
name = "hats-bench"
path = "src/main.rs"

[dependencies]
hats-proto.workspace = true
hats-core.workspace = true
hats-adapters.workspace = true

tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
