[package]
name = "hats-proto"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Shared types, error definitions, and traits for Hats"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
base64 = "0.22"

[dev-dependencies]
serde_json.workspace = true
