[package]
name = "hats-telegram"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Telegram integration for human-in-the-loop orchestration in Hats"

[lints]
workspace = true

[dependencies]
hats-proto.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true

# Telegram bot framework
teloxide.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
