[package]
name = "ralph-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Core orchestration loop, configuration, and state management for Ralph Orchestrator"

[lints]
workspace = true

[dependencies]
ralph-proto.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
crossterm.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
